# mtga-commentary-automation

./: .gitignore  LICENSE  README.md  build.ps1  commentary_backend.log.1  commentary_backend.spec  requirements.txt  setup.cfg
config/: 2001.json  config.json  defaultSpeaker.json  defaultTalker.json
src/mtgacommentary/: commentary_backend.py  file_version_info.txt  modeless_dialog_test.py  readme.txt  sample.json  seikasay2.py
src/mtgacommentary/LICENSE/psutil/: PyPI - psutil.url
src/mtgacommentary/LICENSE/websocket-client/: PyPI - websocket-client.url
src/mtgacommentary/config/: 1707.json  2001.json  2002.json  config.json  defaultSpeaker.json
