[metadata]
name = mtgacommentary-poslogithub
version = 0.0.1
author = poslogithub
author_email = black_tp@hotmail.com
description = MTGA commentary automation with mtgatracker_backend and AssistantSeika
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/poslogithub/mtga-commentary-automation
project_urls =
    Bug Tracker = https://github.com/poslogithub/mtga-commentary-automation
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src